deployment/kubernetes/configuration-service.yml
# Add a Service/Deployment for the Spring Cloud Configuration Service
apiVersion: v1
kind: Service
metadata:
  name: configuration-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: configuration
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: configuration-deployment
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 50%
  template:
    metadata:
      labels:
        app: configuration
        tier: backend
    spec:
      containers:
      - name: configuration
        image: smarterblanced/configuration-service:3.1.0.RELEASE
        readinessProbe:
          httpGet:
            path: /health.json
            port: 8888
            scheme: HTTP
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 250M
          limits:
            cpu: 200m
            memory: 500M
        ports:
        - containerPort: 8888
